# CityInfo

./: README.md  codetoManifest.py  commands.txt  commands_citysimulator.txt  docker-compose.yaml  getchunks_script.py  guidelines.txt  testupload.html  todo.txt
citysimulator/: Dockerfile  jest.config.js  package-lock.json  package.json  server.js  test_notify.js
citysimulator/.next/: BUILD_ID  build-manifest.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
citysimulator/downloads/: ola#1.txt
citysimulator/manifests/: manifest_r1.json
citysimulator/pages/: FileDownloadPage.js  blockchain.tsx  index.tsx  manifest.js  notify_interest.tsx  test.tsx  upload.tsx
citysimulator/styles/: Home.module.css
cxxprocessor/: CMakeLists.txt  Dockerfile  build.sh  cityinfo-tp.cpp
paraoNDNsim/: makefile.py  ndn-Test.cpp  ndn-grid.cpp  ndn-gridTest.cpp  ndnSimpleExample.cpp  testscript.sh
paraoNDNsim/apps/: ndn-consumer.cpp  ndn-consumer.hpp  ndn-producer.cpp  ndn-producer.hpp
paraoNDNsim/examples/: ndn-Test.cpp  ndn-grid.cpp  ndn-gridTest.cpp  ndnBlock.cpp
paraoNDNsim/manifests/: manifest_10chunksfile.txt
producer/: Dockerfile  package-lock.json  package.json  producer.js
producer/data_files/: filenew
pushNDN/: ndn-consumer.cpp  ndn-consumer.hpp  ndn-grid.cpp  ndn-producer.cpp
pyclient/: Dockerfile  cityinfo  cityinfo_commands.py  setup.py  startapi.sh
pyclient/tests/: test_tp_simplewallet.py
pyclient/wallet/: __init__.py  cityinfo_cli.py  cityinfo_client.py  cityinfo_message_factory.py
scripts/: consumer_script.py
(+160 files in other folders)
