
CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(cityinfo-tp CXX)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)

FIND_PACKAGE (Threads REQUIRED)
FIND_LIBRARY(ZMQ_LIB zmq)

FILE(GLOB src "*.cpp" "*.h" )

IF( UNIX )
    SET(CMAKE_CXX_FLAGS "-std=c++11" ${CMAKE_CXX_FLAGS})
ENDIF()

ADD_EXECUTABLE(${PROJECT_NAME} ${src})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} sawtooth )
TARGET_LINK_LIBRARIES(${PROJECT_NAME} proto )
TARGET_LINK_LIBRARIES(${PROJECT_NAME} protobuf )
TARGET_LINK_LIBRARIES(${PROJECT_NAME} zmq)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} zmqpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} log4cxx)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} cryptopp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} pthread)


